--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -185,7 +185,7 @@
     </div>
     <div class="col-6 main">
       <div class="row">
-        <div class="col-6 actionBlock hover" ng-click="askquestion = true">
+        <div class="col-6 actionBlock hover" ng-click="askquestion = true; show=false;">
           <button
             type="button"
             style="border-radius: 3rem; height: 4rem; width: 70%"
@@ -197,7 +197,7 @@
             <i class="fa fa-plus pr-2" aria-hidden="true"></i>&nbsp;Ask Quesion
           </button>
         </div>
-        <div class="col-6 actionBlock hover" ng-click="show=true">
+        <div class="col-6 actionBlock hover" ng-click="show=true; askquestion = false;">
           <button
             type="button"
             style="border-radius: 3rem; height: 4rem; width: 70%"
