--- a/frontendSocialFeed/component/questionComponent.html
+++ b/frontendSocialFeed/component/questionComponent.html
@@ -35,50 +35,55 @@
   </div>
   <!-- FEED CONTENT -->
   <div class="card-body">
-    <p id="content" class="card-text" ng-show="!editMode">
+    <div class="row">
+    <div class="col-9" id="content" class="card-text" ng-show="!editMode">
       {{data.description}}
-    </p>
-    <p class="posted">{{ data.postedTime | timeAgo }}</p>
-    <input
+    </div>
+    <div class="col-3 posted" style="text-align: right;">{{ data.postedTime | timeAgo }}</div>
+    </div>
+    <ul ng-show="checkbox"> 
+      <li
+        class="list-option"
+        ng-repeat="singleOption in options | orderBy: 'created_at':true"
+      >
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio1"
+            value="option1"
+          />
+          <label class="form-check-label" for="inlineRadio1">{{singleOption.content}}</label>
+        </div>
+      </li>
+    </ul> 
+    <a class="nav-link hover" ng-init="checkbox=false" ng-click="checkbox = !checkbox; getOptionsByQuestionId(data.id)" style="color: black">
+      <i class="fa fa-user" aria-hidden="true"></i> &nbsp;Be the first to poll</a
+    >
+    <!-- <input
       id="contentInput"
       class="card-text"
       ng-show="editMode"
       ng-model="editedContent"
       type="text"
-    />
+    /> -->
   </div>
   <!-- options LIKE DISLIKE COMMENT SHARE -->
   <div class="row card-header">
     <div style="position: relative">
       <a class="nav-link hover" ng-click="checkbox=true; getOptionsByQuestionId(data.id)" style="color: black">
-        Answers</a
+        Share</a
       >
       <div ng-show="loadinglike" class="allloader">
         <div class="spinner"></div>
       </div>
-      
-      
-     
+
+    </div>
     </div>
     <!-- check box for ask question -->
-      <ul ng-show="checkbox"> 
-        <li
-          class="list-option"
-          ng-repeat="singleOption in options | orderBy: 'created_at':true"
-        >
-          <div class="form-check form-check-inline">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="inlineRadioOptions"
-              id="inlineRadio1"
-              value="option1"
-            />
-            <label class="form-check-label" for="inlineRadio1">{{singleOption.content}}</label>
-          </div>
-        </li>
-      </ul> 
-  </div>
+      
+  
   <!--Edit modal pop up  -->
   <div
     class="modal fade"
