--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -316,7 +316,7 @@
                 </div>
                 <div
                   class="col-2"
-                  ng-click="showPollOption = false; showfirstOption = false; showSecondOption=false; "
+                  ng-click="showPollOption = false; showfirstOption = false; showSecondOption=false; isDiv1Clicked =false; isDiv2Clicked = false;"
                 >
                   Cancel&nbsp;
                 </div>
