--- a/frontendSocialFeed/component/questionComponent.html
+++ b/frontendSocialFeed/component/questionComponent.html
@@ -52,6 +52,7 @@
             class="form-check-input"
             type="radio"
             name="inlineRadioOptions"
+            ng-click="addAnswer(singleOption.id,data.userName)"
             id="inlineRadio1"
             value="option1"
           />
