--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -197,7 +197,7 @@
             ng-mouseenter="hover1 = true"
             ng-mouseleave="hover1 = false"
           >
-            <i class="fa fa-plus pr-2" aria-hidden="true"></i>&nbsp;Ask Quesion
+          <i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>&nbsp;Ask Quesion
           </button>
         </div>
         <div
@@ -207,7 +207,7 @@
           <button
             type="button"
             style="border-radius: 3rem; height: 4rem; width: 70%"
-            class="btn askBtn"
+            class="btn postBtnn"
             ng-class="{red: hover1}"
             ng-mouseenter="hover1 = true"
             ng-mouseleave="hover1 = false"
