--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -7,12 +7,13 @@
       <span ng-model="name">{{data.userName}}</span>
     </div>
     <div class="dropdown col-3">
-      <i class="fas fa-ellipsis-h dots dp" 
+      <i
+        class="fas fa-ellipsis-h dots dp"
         type="button"
         id="dropdownMenuButton"
         data-bs-toggle="dropdown"
-        aria-expanded="false" 
-     ></i>
+        aria-expanded="false"
+      ></i>
       <ul class="dropdown-menu drop" aria-labelledby="dropdownMenuButton">
         <li ng-click="deleteFeed(data)">
           <a class="dropdown-item hover"
@@ -43,40 +44,58 @@
   </div>
   <!-- options LIKE DISLIKE COMMENT SHARE -->
   <div class="row card-header">
-        <div class="col-3" ng-click="incrementLike(data)" style="position: relative;">
-        <a class="nav-link hover" style="color: black"><i class="fa fa-heart" style="color: black;"></i> Like</a>
-        <div ng-show="loadinglike" class="allloader">
-          <div class="spinner"></div>
-        </div>
-        </div>
-      <div class="col-3" ng-click="decrementLike(data)" style="position: relative;">
-        <a class="nav-link hover" style="color: black"><i class="fa fa-thumbs-down"></i> Dislike</a>
-        <div ng-show="loadingDislike" class="allloader">
-          <div class="spinner"></div>
-        </div>
+    <div
+      class="col-3"
+      ng-click="incrementLike(data)"
+      style="position: relative"
+    >
+      <a class="nav-link hover" style="color: black"
+        ><i class="fa fa-heart" style="color: black"></i> Like</a
+      >
+      <div ng-show="loadinglike" class="allloader">
+        <div class="spinner"></div>
       </div>
-      <div class="col-3" style="position: relative;">
-        <a class="nav-link hover" style="color: black" ng-click="showCommentInput = true;">
-          <i class="fa fa-comment"></i> Comment
-        </a>
-        <div ng-show="loadingComments" class="allloader">
-          <div class="spinner"></div>
-        </div>
+    </div>
+    <div
+      class="col-3"
+      ng-click="decrementLike(data)"
+      style="position: relative"
+    >
+      <a class="nav-link hover" style="color: black"
+        ><i class="fa fa-thumbs-down"></i> Dislike</a
+      >
+      <div ng-show="loadingDislike" class="allloader">
+        <div class="spinner"></div>
       </div>
-      
-      
-      <div class="col-3 sharebtn" style="float: right">
-        <a href="#!/share?userName={{data.userName}}&description={{data.description}} & postedTime={{data.postedTime}}" class="nav-link hover" style="color: black">
-          <i class="fas fa-share"></i>
-          <span class="text">Share</span>
-        </a>
+    </div>
+    <div class="col-3" style="position: relative">
+      <a
+        class="nav-link hover"
+        style="color: black"
+        ng-click="showCommentInput = true;"
+      >
+        <i class="fa fa-comment"></i> Comment
+      </a>
+      <div ng-show="loadingComments" class="allloader">
+        <div class="spinner"></div>
       </div>
-      
-      
+    </div>
+
+    <div class="col-3 sharebtn" style="float: right">
+      <a
+        href="#!/share?userName={{data.userName}}&description={{data.description}} & postedTime={{data.postedTime}}"
+        class="nav-link hover"
+        style="color: black"
+      >
+        <i class="fas fa-share"></i>
+        <span class="text">Share</span>
+      </a>
+    </div>
   </div>
- 
+
   <span ng-show="data.likeCounts > 0 || data.dislikeCounts > 0">
-    <span ng-show="data.likeCounts > 0"> {{data.likeCounts}} likes</span>&nbsp;&nbsp;
+    <span ng-show="data.likeCounts > 0"> {{data.likeCounts}} likes</span
+    >&nbsp;&nbsp;
     <span ng-show="data.dislikeCounts > 0">
       {{data.dislikeCounts}} dislikes
     </span></span
@@ -119,7 +138,7 @@
       ng-repeat="singleComment in data.comments | orderBy: 'created_at':true"
     >
       <div class="row">
-        <div class="col-10" style="position: relative";>
+        <div class="col-10" style="position: relative" ;>
           <p class="commentList" ng-show="!singleComment.editMode">
             {{singleComment.description}}
           </p>
@@ -131,34 +150,37 @@
             type="text"
           />
           <button
-          type="button"
-          class="btn btn-floating commentBtn"
-              ng-click="Update(singleComment,data)"
-              ng-click="singleComment.editMode=false"
-              ng-show="singleComment.editMode"
-              ><i class="fa fa-check" aria-hidden="true"></i></button
-            >
-            
-            <button
+            type="button"
+            class="btn btn-floating commentBtn"
+            ng-click="Update(singleComment,data)"
+            ng-click="singleComment.editMode=false"
+            ng-show="singleComment.editMode"
+          >
+            <i class="fa fa-check" aria-hidden="true"></i>
+          </button>
+
+          <button
             type="button"
             class="btn btn-floating commentBtn"
             ng-click="Cancel(singleComment)"
             ng-show="singleComment.editMode"
             ng-click="singleComment.editMode=false"
-            ><i class="fa fa-times" aria-hidden="true"></i></button
           >
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </button>
           <!-- <div ng-show="loadingComments" class="commentloader">
             <div class="spinner"></div>
           </div> -->
-
         </div>
         <div class="dropdown col-2">
-          <i class="fas fa-ellipsis-h dots dp" type="button"
-        id="dropdownMenuButton"
-        data-bs-toggle="dropdown"
-        aria-expanded="false" 
-        ng-show="!singleComment.editMode"
-     ></i>
+          <i
+            class="fas fa-ellipsis-h dots dp"
+            type="button"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            ng-show="!singleComment.editMode"
+          ></i>
           <ul class="dropdown-menu drop" aria-labelledby="dropdownMenuButton">
             <li>
               <a
