--- a/frontendSocialFeed/component/questionComponent.html
+++ b/frontendSocialFeed/component/questionComponent.html
@@ -62,7 +62,7 @@
             > {{singleOption.content}} </label
           >
          
-          <span ng-if="singleOption.newOptionCount" class="optionCountShow">People Agree {{singleOption.newOptionCount}}</span>
+          <span ng-if="singleOption.newOptionCount && showOption" class="optionCountShow">Agree by you and {{singleOption.newOptionCount}} other</span>
        
         </div>
       </li>
