--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -1,7 +1,10 @@
 <div class="row card custom-card">
   <div class="card-header row">
     <div class="col-2">
-      <img class="image" src="img/facebook.png" alt="not found" />
+      <img
+              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+              style="width: 50px; height: 50px"
+            />
     </div>
     <div class="col-7 name">
       <span ng-model="name">{{data.userName}}</span>
