--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -324,20 +324,36 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
 }
 
-.spinner {
+/* .spinner {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
   animation: spin 2s linear infinite;
+} */
+
+.small-loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   z-index: 1; 
+}
+
+.spinner {
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  border-top: 2px solid #3498db;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
@@ -353,7 +369,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.8); /* Adjust the background color and opacity as needed */
+  /* background-color: rgba(255, 255, 255, 0.8); Adjust the background color and opacity as needed */
   z-index: 1;
 }
 
